lots in here: removed restangular dependency and just doing plain  for now; got timeline working; got swimlanes working; fixed lots of bugs

--- a/frontend/app/views/actor.html
+++ b/frontend/app/views/actor.html
@@ -1,1 +1,2 @@
-I am an actor view {{actor.title}}
+<h1>I am an actor: {{actor.title}}</h1>
+<button type="submit" ng-click="killActor()">&times;</button>
