--- a/frontend/app/css/styles.css
+++ b/frontend/app/css/styles.css
@@ -9,3 +9,43 @@ rzslider span.pointer:after{
 rzslider span.bar{
     background-color: #CCC;
 }
+
+body{
+    font-family:Arial;
+    font-size: 10px;
+}
+input {
+    width: 120px;
+    margin-right: 10px;
+}
+#actorView{
+    width:90%;
+    height:100%;
+    position: absolute;
+    top:0;
+    left:0;
+    background:rgba(255,255,255, .9);
+    z-index:9999;
+    box-sizing:border-box;
+    padding:40px;
+}
+.timelineItems .actor{
+    box-sizing:border-box;
+    border:1px solid #CCC;
+    border-radius: 3px;
+    margin-bottom: 3px;
+    cursor:pointer;
+    float:left;
+    position:absolute;
+    top:15px;
+    background:#FAFAFA;
+}
+.timelineItems .lane{
+    clear: both;
+    width: 100%;
+    float: left;
+    border-bottom: 1px solid #EAEAEA;
+    padding:5px 0;
+    position:relative;
+    height:30px;
+}
