--- a/frontend/app/views/map.html
+++ b/frontend/app/views/map.html
@@ -1,21 +1,24 @@
 <select ng-model="historicalFilter" ng-options="value for value in historical" ng-change="filterActors()"></select>
-<div>
-    {{timelineSlider}}
-</div>
-<div class="timelineItems">
-    <div ng-repeat="lane in lanes" class="lane">
-    <div class="actor" ng-repeat="actor in lane" ng-click="showActor(actor.id)" style="margin-left:{{actor.startPercent}}%;width:{{actor.endPercent - actor.startPercent}}%;background-color:#{{actor.color}}">
-            {{actor.id}}: {{actor.start}} - {{actor.end}}
-        </div>
+<button type="submit" ng-click="showTimeline= !showTimeline">Timeline</button>
+<div id="timeline" ng-show="showTimeline">
+    <div>
+        {{timelineSlider}}
     </div>
-    
+    <div class="timelineItems">
+        <div ng-repeat="lane in lanes" class="lane">
+        <div class="actor" ng-repeat="actor in lane" ng-click="showActor(actor.id)" style="margin-left:{{actor.startPercent}}%;width:{{actor.endPercent - actor.startPercent}}%;background-color:#{{actor.color}}">
+                {{actor.id}}: {{actor.start}} - {{actor.end}}
+            </div>
+        </div>
+        
+    </div>
+    <rzslider ng-cloak
+            rz-slider-floor="timelineSlider.floor"
+            rz-slider-ceil="timelineSlider.ceil"
+            rz-slider-model="timelineSlider.min"
+            rz-slider-high="timelineSlider.max"
+            rz-slider-translate="translateTimeline"
+            rz-slider-step="{{timelineSlider.step}}"></rzslider>
 </div>
-<rzslider ng-cloak
-        rz-slider-floor="timelineSlider.floor"
-        rz-slider-ceil="timelineSlider.ceil"
-        rz-slider-model="timelineSlider.min"
-        rz-slider-high="timelineSlider.max"
-        rz-slider-translate="translateTimeline"
-        rz-slider-step="{{timelineSlider.step}}"></rzslider>
 <leaflet center="centerMarker" width="100%" height="500" markers="markers"></leaflet>
 <div ng-include="'views/actor.html'" id="actorView" ng-show="actor"></div>
