restyle timeline a bit; tweak lane logic; add feature to highlight actor when you mouse over them in timeline

--- a/frontend/app/css/styles.css
+++ b/frontend/app/css/styles.css
@@ -12,7 +12,6 @@ rzslider span.bar{
 
 body{
     font-family:Arial;
-    font-size: 10px;
 }
 input {
     width: 120px;
@@ -29,6 +28,16 @@ input {
     box-sizing:border-box;
     padding:40px;
 }
+#timelineWrapper{
+    margin-top:10px;
+    padding:15px 0;
+    background:#EAEAEA;
+}
+.timelineItems{
+    overflow: hidden;
+    margin:20px 0;
+
+}
 .timelineItems .actor{
     box-sizing:border-box;
     border:1px solid #CCC;
@@ -37,8 +46,16 @@ input {
     cursor:pointer;
     float:left;
     position:absolute;
-    top:15px;
+    top:5px;
     background:#FAFAFA;
+    padding: 3px 5px;
+    height: 30px;
+    font-size: 9px;
+    box-shadow: inset 0px 0px 10px 0px rgba(0,0,0,.3);
+}
+.timelineItems .actor:hover{
+    background-color:black !important;
+    color:white !important;
 }
 .timelineItems .lane{
     clear: both;
