--- a/frontend/app/css/styles.css
+++ b/frontend/app/css/styles.css
@@ -17,16 +17,28 @@ input {
     width: 120px;
     margin-right: 10px;
 }
+h1{
+    font-size:26px;
+}
+h2{
+    font-size:20px;
+}
 #actorView{
-    width:90%;
+    width:100%;
     height:100%;
     position: absolute;
-    top:0;
-    left:0;
-    background:rgba(255,255,255, .9);
     z-index:9999;
-    box-sizing:border-box;
+    top:0;
+    margin:0 auto;
     padding:40px;
+    
+    background:rgba(255,255,255, .4);
+    box-sizing:border-box;
+}
+#actorViewInner{
+    background:white;
+    border:5px solid #CCC;
+    padding:20px;
 }
 #timelineWrapper{
     margin-top:10px;
@@ -65,4 +77,30 @@ input {
     padding:5px 0;
     position:relative;
     height:30px;
+}
+
+.text-window{
+    max-height: 400px;
+    overflow:scroll;
+    padding-right: 20px;
+    position: relative;
+}
+button.close{
+    color:#333;
+    opacity:.8;
+    margin-right:15px;
+}
+#actor-media{
+    max-height: 420px;
+}
+#actor-media li{
+    display:none;
+    opacity:0;
+}
+#actor-media li.active{
+    display:block;
+    opacity:1;
+}
+#actor-media li img{
+    max-height: 100%;
 }
