--- a/frontend/app/views/map.html
+++ b/frontend/app/views/map.html
@@ -2,7 +2,7 @@
 
 <leaflet center="centerMarker" width="100%" height="500" markers="markers"></leaflet>
 <select ng-model="historicalFilter" ng-options="value for value in historical" ng-change="filterActors()"></select>
-<button type="submit" ng-click="showTimeline= !showTimeline">Timeline</button>
+<button type="submit" ng-click="showTimeline= !showTimeline" class="btn btn-primary">Timeline</button>
 <div id="timeline" ng-show="!showTimeline">
     <div class="timelineItems">
         <div ng-repeat="lane in lanes" class="lane">
