--- a/frontend/app/views/map.html
+++ b/frontend/app/views/map.html
@@ -1,6 +1,6 @@
 <div ng-include="'views/actor.html'" id="actorView" ng-show="actor"></div>
 
-<leaflet center="centerMarker" width="100%" height="500" markers="markers"></leaflet>
+<leaflet center="centerMarker" width="100%" height="500" markers="markers" layers="layers"></leaflet>
 <select ng-model="historicalFilter" ng-options="value for value in historical" ng-change="filterActors()"></select>
 <button type="submit" ng-click="showTimeline= !showTimeline" class="btn btn-primary">Timeline</button>
 <div id="timeline" ng-show="!showTimeline">
