--- a/frontend/app/views/actor.html
+++ b/frontend/app/views/actor.html
@@ -54,36 +54,37 @@
                         </small>
                     </li>
                     <li spy="fox-newsreel_schoenbrunn-rally">
-                        <videogular
-                            vg-player-ready="onPlayerReady" vg-complete="onCompleteVideo" vg-update-time="onUpdateTime" vg-update-size="onUpdateSize" vg-update-volume="onUpdateVolume" vg-update-state="onUpdateState"
-                            vg-width="config.width" vg-height="config.height" vg-theme="config.theme.url" vg-autoplay="config.autoPlay" vg-stretch="config.stretch.value" vg-responsive="true">
-                            <video vg-src="config.sources" preload='metadata'></video>
+                        <div ng-controller="VideoCtrl">
+                            <videogular
+                                vg-player-ready="onPlayerReady" vg-complete="onCompleteVideo" vg-update-time="onUpdateTime" vg-update-size="onUpdateSize" vg-update-volume="onUpdateVolume" vg-update-state="onUpdateState"
+                                vg-width="config.width" vg-height="config.height" vg-theme="config.theme.url" vg-autoplay="config.autoPlay" vg-stretch="config.stretch.value" vg-responsive="true">
+                                <video vg-src="config.sources" preload='metadata'></video>
 
-                            <vg-ima-ads vg-network="config.plugins.ads.network" vg-unit-path="config.plugins.ads.unitPath" vg-companion="config.plugins.ads.companion" vg-companion-size="config.plugins.ads.companionSize" vg-ad-tag-url="config.plugins.ads.adTagUrl"></vg-ima-ads>
-                            <vg-poster-image vg-url='config.plugins.poster.url' vg-stretch="config.stretch.value"></vg-poster-image>
-                            <vg-buffering></vg-buffering>
-                            <vg-overlay-play vg-play-icon="config.theme.playIcon"></vg-overlay-play>
+                                <vg-poster-image vg-url='config.plugins.poster.url' vg-stretch="config.stretch.value"></vg-poster-image>
+                                <vg-buffering></vg-buffering>
+                                <vg-overlay-play vg-play-icon="config.theme.playIcon"></vg-overlay-play>
 
-                            <vg-controls vg-autohide="config.autoHide" vg-autohide-time="config.autoHideTime" style="height: 50px;">
-                                <vg-play-pause-button vg-play-icon="config.theme.playIcon" vg-pause-icon="config.theme.pauseIcon"></vg-play-pause-button>
-                                <vg-timeDisplay>{{ currentTime }}</vg-timeDisplay>
-                                <vg-scrubBar>
-                                    <vg-scrubbarcurrenttime></vg-scrubbarcurrenttime>
-                                </vg-scrubBar>
-                                <vg-timeDisplay>{{ totalTime }}</vg-timeDisplay>
-                                <vg-volume>
-                                    <vg-mutebutton
-                                        vg-volume-level-3-icon="config.theme.volumeLevel3Icon"
-                                        vg-volume-level-2-icon="config.theme.volumeLevel2Icon"
-                                        vg-volume-level-1-icon="config.theme.volumeLevel1Icon"
-                                        vg-volume-level-0-icon="config.theme.volumeLevel0Icon"
-                                        vg-mute-icon="config.theme.muteIcon">
-                                    </vg-mutebutton>
-                                    <vg-volumebar></vg-volumebar>
-                                </vg-volume>
-                                <vg-fullscreenButton vg-enter-full-screen-icon="config.theme.enterFullScreenIcon" vg-exit-full-screen-icon="config.theme.exitFullScreenIcon"></vg-fullscreenButton>
-                            </vg-controls>
-                        </videogular>
+                                <vg-controls vg-autohide="config.autoHide" vg-autohide-time="config.autoHideTime" style="height: 50px;">
+                                    <vg-play-pause-button vg-play-icon="config.theme.playIcon" vg-pause-icon="config.theme.pauseIcon"></vg-play-pause-button>
+                                    <vg-timeDisplay>{{ currentTime }}</vg-timeDisplay>
+                                    <vg-scrubBar>
+                                        <vg-scrubbarcurrenttime></vg-scrubbarcurrenttime>
+                                    </vg-scrubBar>
+                                    <vg-timeDisplay>{{ totalTime }}</vg-timeDisplay>
+                                    <vg-volume>
+                                        <vg-mutebutton
+                                            vg-volume-level-3-icon="config.theme.volumeLevel3Icon"
+                                            vg-volume-level-2-icon="config.theme.volumeLevel2Icon"
+                                            vg-volume-level-1-icon="config.theme.volumeLevel1Icon"
+                                            vg-volume-level-0-icon="config.theme.volumeLevel0Icon"
+                                            vg-mute-icon="config.theme.muteIcon">
+                                        </vg-mutebutton>
+                                        <vg-volumebar></vg-volumebar>
+                                    </vg-volume>
+                                    <vg-fullscreenButton vg-enter-full-screen-icon="config.theme.enterFullScreenIcon" vg-exit-full-screen-icon="config.theme.exitFullScreenIcon"></vg-fullscreenButton>
+                                </vg-controls>
+                            </videogular>
+                        </div>
                         <small>
                             Movie clip from a report in Fox Tönende Wochenschau, which was incorporated into the 1933 newsreels produced by Vienna's police department. The sequence begins with a speech held by Ernst Rüdiger Starhemberg, the leader of the Austrian Home Guard, at the "Turks Deliverance Celebration" in Schlosspark Schönbrunn on 14 May 1933: "Front soldiers among you, who like me have had the honour of staking your lives against the enemy, I call upon you today to think back. / Be proud to be German Austrians, be proud to be Austrian protectors of the homeland. / To welcome our front comrade, Federal Chancellor Dollfuß, as comrades." Then Engelbert Dollfuß, the Austrian chancellor, says: "When you celebrate this day and this time today, it is not a usual historical commemoration. Foreign spirit and foreign ideas are in our people, have lodged themselves and brought evil upon us. In the fight for the homeland, in the fight for the bettering of our homeland, we close ranks firm and true." Media devices are everywhere: a man winding a movie camera; a photographer taking pictures; an operator adjusting a microphone. The song played at the end is Joseph Haydn's Kaiserlied (1796/97), which was not only employed as the anthem for the emperors of the Holy Roman Empire and of the Austro-Hungarian Monarchy, but also as the tune of the Deutschlandlied, the German national anthem. Source: "Die Türkenbefreiungsfeier des österreichischen Heimatschutzes in Wien" (01:22–03:08), in: Polizeijahresschau 1933. Filmarchiv Austria (Vienna), JS 1933/8.
                         </small>
