--- a/frontend/app/styles/styles.scss
+++ b/frontend/app/styles/styles.scss
@@ -23,6 +23,18 @@ h1{
 h2{
     font-size:20px;
 }
+#mainHeader{
+    margin-top:20px;
+    margin-bottom: 20px;
+    .nav{
+        margin-left:20px;
+    }
+}
+.angular-leaflet-map{
+    width:100%;
+    height:100%;
+    position:absolute;
+}
 #actorView{
     width:100%;
     height:100%;
@@ -40,6 +52,11 @@ h2{
     border:5px solid #CCC;
     padding:20px;
 }
+#filters{
+    position: absolute;
+    bottom:0;
+    width:100%;
+}
 #timelineWrapper{
     margin-top:10px;
     padding:15px 0;
@@ -48,6 +65,7 @@ h2{
 .timelineItems{
     overflow: hidden;
     margin:20px 0;
+    background-color:white;
     .lane{
         clear: both;
         width: 100%;
