--- a/frontend/app/styles/styles.scss
+++ b/frontend/app/styles/styles.scss
@@ -58,14 +58,13 @@ h2{
     width:100%;
 }
 #timelineWrapper{
-    margin-top:10px;
     padding:15px 0;
     background:#EAEAEA;
 }
 .timelineItems{
     overflow: hidden;
-    margin:20px 0;
     background-color:white;
+    padding:10px;
     .lane{
         clear: both;
         width: 100%;
@@ -136,5 +135,54 @@ button.close{
 }
 
 .btn-primary{
-    color:white !important;
+    color:black !important;
 }
+.btn-timeline-trigger,
+.btn-timeline-trigger:link,
+.btn-timeline-trigger:hover,
+.btn-timeline-trigger:active,
+.btn-timeline-trigger:visited,
+.btn-timeline-trigger:focus{
+    outline:none;
+    border-radius:0;
+    background-color:white;
+    border:none;
+    padding:10px 20px;
+}
+
+/* angular animations */
+// .animate-show {
+//   -webkit-transition:all linear 0.5s;
+//   transition:all linear 0.5s;
+//   line-height:20px;
+//   opacity:1;
+//   padding:10px;
+//   background:white;
+// }
+ 
+// .animate-show.ng-hide-add,
+// .animate-show.ng-hide-remove {
+//   display:block!important;
+// }
+ 
+// .animate-show.ng-hide {
+//   line-height:0;
+//   opacity:0;
+//   padding:0 10px;
+// }
+ 
+// .check-element {
+//   padding:10px;
+//   border:1px solid black;
+//   background:white;
+// }
+
+// .animate-enter {
+//     -webkit-transition: 1s linear all; /* Chrome */
+//     transition: 1s linear all;
+//     opacity: 0;
+// }
+ 
+// .animate-enter.animate-enter-active {
+//     opacity: 1;
+// }
