--- a/frontend/app/views/map.html
+++ b/frontend/app/views/map.html
@@ -2,14 +2,19 @@
 
 <leaflet center="centerMarker" width="100%" height="100%" markers="markers" layers="layers" event-broadcast="events"></leaflet>
 <div id="filters">
-    <p><select ng-model="historicalFilter" ng-options="value for value in historical" ng-change="filterActors()"></select></p>
+    <!--p><select ng-model="historicalFilter" ng-options="value for value in historical" ng-change="filterActors()"></select></p-->
 
     <div ng-controller="TimelineCtrl">
-        <button type="submit" ng-click="showTimeline= !showTimeline" class="btn btn-primary">Timeline</button>
-        <div id="timeline" ng-show="!showTimeline">
+        <button type="submit" class="btn btn-primary btn-timeline-trigger" slide-toggle="#timeline">Timeline</button>
+        <div id="timeline" class="slideable" duration="500ms" easing="ease">
             <div class="timelineItems">
                 <div ng-repeat="lane in lanes" class="lane">
-                <div class="actor" ng-repeat="actor in lane" ng-click="showActor(actor.id)" ng-mouseenter="highlightActor(actor.id)" ng-mouseleave="highlightActor(actor.id, true)" style="margin-left:{{actor.startPercent}}%;width:{{actor.endPercent - actor.startPercent}}%;background-color:#{{actor.color}}">
+                <div class="actor" 
+                    ng-repeat="actor in lane" 
+                    ng-click="showActor(actor.id)" 
+                    ng-mouseenter="highlightActor(actor.id)" 
+                    ng-mouseleave="highlightActor(actor.id, true)" 
+                    style="margin-left:{{actor.startPercent}}%;width:{{actor.endPercent - actor.startPercent}}%;background-color:#{{actor.color}}">
                         #{{actor.id}}<br />
                         {{actor.start}} - {{actor.end}}
                     </div>
