evidently its amateur hour

--- a/frontend/app/views/about.html
+++ b/frontend/app/views/about.html
@@ -12,4 +12,4 @@
                         proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
     </div>
-</div
+</div>
