--- a/frontend/app/views/topography.html
+++ b/frontend/app/views/topography.html
@@ -11,4 +11,4 @@
                         proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
     </div>
-</div
+</div>
