--- a/frontend/app/views/actor.html
+++ b/frontend/app/views/actor.html
@@ -57,9 +57,9 @@
                         <div ng-controller="VideoCtrl">
                         <videogular vg-width="config.width" vg-height="config.height" vg-theme="config.theme">
                             <video class='videoPlayer' preload='none'>
-                                <source src='http://localhost/~darius/videos/fox-newsreel_schoenbrunn-rally.mp4.mp4' type='video/mp4'>
-                                <source src='http://localhost/~darius/videos/fox-newsreel_schoenbrunn-rally.webmhd.webm' type='video/webm'>
-                                <source src='http://localhost/~darius/videos/fox-newsreel_schoenbrunn-rally.oggtheora.ogv' type='video/ogg'>
+                                <source src='http://campusmedius.s3.amazonaws.com/assets/fox-newsreel_schoenbrunn-rally.mp4.mp4.mp4' type='video/mp4'>
+                                <source src='http://campusmedius.s3.amazonaws.com/assets/fox-newsreel_schoenbrunn-rally.webmhd.webm' type='video/webm'>
+                                <source src='http://campusmedius.s3.amazonaws.com/assets/fox-newsreel_schoenbrunn-rally.oggtheora.ogv' type='video/ogg'>
                             </video>
                             <vg-poster-image vg-url='config.plugins.poster.url' vg-stretch="config.stretch.value"></vg-poster-image>
                             <vg-buffering></vg-buffering>
