--- a/frontend/app/styles/styles.scss
+++ b/frontend/app/styles/styles.scss
@@ -12,6 +12,7 @@ rzslider span.bar{
 
 body{
     font-family:Arial;
+    background:black;
 }
 input {
     width: 120px;
@@ -28,6 +29,14 @@ h2{
     margin-bottom: 20px;
     .nav{
         margin-left:20px;
+    }
+}
+.nav a{
+    color:white;
+    font-family: 'Titillium Web', sans-serif;
+    font-size:18px;
+    &:hover{
+        color:black;
     }
 }
 .angular-leaflet-map{
@@ -63,7 +72,7 @@ h2{
 }
 .timelineItems{
     overflow: hidden;
-    background-color:white;
+    background-color:black;
     padding:10px;
     .lane{
         clear: both;
@@ -135,7 +144,9 @@ button.close{
 }
 
 .btn-primary{
-    color:black !important;
+    background: black;
+    font-family: 'Titillium Web', sans-serif;
+    font-size:18px;
 }
 .btn-timeline-trigger,
 .btn-timeline-trigger:link,
@@ -145,7 +156,7 @@ button.close{
 .btn-timeline-trigger:focus{
     outline:none;
     border-radius:0;
-    background-color:white;
+    background-color:black;
     border:none;
-    padding:10px 20px;
+    padding:15px 40px;
 }
