style swimlanes and actors to comp

--- a/frontend/app/styles/styles.scss
+++ b/frontend/app/styles/styles.scss
@@ -106,16 +106,13 @@ h2{
         clear: both;
         width: 100%;
         float: left;
-        border-bottom: 1px solid #EAEAEA;
-        padding:5px 0;
         position:relative;
-        height:42px;
+        height:36px;
     }
 
     .actor{
         box-sizing:border-box;
-        border:1px solid #CCC;
-        border-radius: 3px;
+        border-right:1px solid black;
         margin-bottom: 3px;
         cursor:pointer;
         float:left;
@@ -128,8 +125,8 @@ h2{
         box-shadow: inset 0px 0px 10px 0px rgba(0,0,0,.3);
 
         &:hover{
-            background-color:black !important;
-            color:white !important;
+            background-color:white !important;
+            color:black !important;
         }
     }
 }
