--- a/frontend/app/views/map.html
+++ b/frontend/app/views/map.html
@@ -5,7 +5,7 @@
     <!--p><select ng-model="historicalFilter" ng-options="value for value in historical" ng-change="filterActors()"></select></p-->
 
     <div ng-controller="TimelineCtrl">
-        <button type="submit" class="btn btn-primary btn-timeline-trigger" slide-toggle="#timeline">Timeline</button>
+        <button type="submit" class="btn btn-primary btn-timeline-trigger" slide-toggle="#timeline">timeline</button>
         <div id="timeline" class="slideable" duration="500ms" easing="ease">
             <div class="timelineItems">
                 <div ng-repeat="lane in lanes" class="lane">
