--- a/frontend/app/views/team.html
+++ b/frontend/app/views/team.html
@@ -3,13 +3,46 @@
         <h1>Team</h1>
     </div>
     <div class="row">
-        <div class="col-md-12">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <div class="col-sm-3">
+            <h2>Simon Ganahl</h2>
+            <div class="bio">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </div>
+        </div>
+        <div class="col-sm-3">
+            <h2>Rory Solomon</h2>
+            <div class="bio">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </div>
+        </div>
+        <div class="col-sm-3">
+            <h2>Mallory Brennan</h2>
+            <div class="bio">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </div>
+        </div>
+        <div class="col-sm-3">
+            <h2>Darius Daftary</h2>
+            <div class="bio">
+                <p>Darius did the front-end development for the Campus Medius project.</p>
+                <p>He loves bridging the creative and technical disciplines to deliver engaging user experiences for clients. He has a deep knowledge of trusted web and mobile technologies and is proficient at leading and mentoring small teams of developers to create great work in a fun, encouraging atmosphere. </p>
+
+                <p>Prior to his current position as Lead Engineer at  Artivest, Darius worked as Director of Client Solutions at Genwi, and before that as Technology Director at Night Agency.</p>
+
+                <p>Darius graduated from Washington University in St. Louis, where he majored in Spanish. Yes, Spanish.</p>
+            </div>
         </div>
     </div>
 </div>
