--- a/frontend/app/styles/styles.scss
+++ b/frontend/app/styles/styles.scss
@@ -196,3 +196,15 @@ button.close{
     height:100%;
     margin-top: 0;
 }
+
+/* leaflet */
+.leaflet-popup-content-wrapper{
+    border-radius: 0;
+}
+.leaflet-popup-content{
+    margin:0;
+}
+.leaflet-popup-content-inner{
+    padding:13px 19px;
+    cursor:pointer;
+}
