--- a/frontend/app/views/actor.html
+++ b/frontend/app/views/actor.html
@@ -1,4 +1,4 @@
-<div class="modal fade in">
+<div class="modal fade in" ng-controller="ActorController" ng-show="actor!==false">
     <div class="modal-dialog modal-full">
         <div class="modal-content">
             <div class="container-fluid" id="actorViewInner">
