--- a/frontend/app/styles/styles.scss
+++ b/frontend/app/styles/styles.scss
@@ -217,6 +217,7 @@ button.close{
     max-width: 95%;
     margin: 0 auto;
     display:block;
+
 }
 
 .rn-carousel-indicator .active{
@@ -240,4 +241,13 @@ button.close{
 .rn-carousel-control.rn-carousel-control-prev:before{
     content: "\e601";
     font-family: icomoon;
+}
+.event-carousel{
+    width:100%;
+    height:600px;
+    .rn-carousel-slide{
+        background-size:contain;
+        background-repeat: no-repeat;
+        background-position: center center;
+    }
 }
