--- a/frontend/app/views/actor.html
+++ b/frontend/app/views/actor.html
@@ -16,8 +16,38 @@
                         <ul rn-carousel rn-carousel-indicator rn-carousel-control class="image carousel ng-cloak event-carousel">
                             
                             <li ng-repeat="obj in actor.media_objects">
-                                <div ng-if="obj.url=='Video'"></div>
-                                <div ng-if="obj.url!='Video'"
+                                <div ng-if="obj.type=='Video'">
+                                  <div ng-controller="VideoCtrl">
+                                    <videogular vg-height="600" vg-responsive="true">
+                                        <video class='videoPlayer' preload='none'>
+                                            <source ng-src='{{ trustSrc(obj.url) }}' type='video/mp4'>
+                                        </video>
+                                        <!-- <vg-poster-image vg-url='config.plugins.poster.url' vg-stretch="config.stretch.value"></vg-poster-image> -->
+                                        <vg-buffering></vg-buffering>
+                                        <vg-overlay-play vg-play-icon="config.theme.playIcon"></vg-overlay-play>
+                                        <vg-controls vg-autohide="config.autoHide" vg-autohide-time="config.autoHideTime" style="height: 50px;">
+                                            <vg-play-pause-button vg-play-icon="config.theme.playIcon" vg-pause-icon="config.theme.pauseIcon"></vg-play-pause-button>
+                                            <vg-timeDisplay>{{ currentTime }}</vg-timeDisplay>
+                                            <vg-scrubBar>
+                                                <vg-scrubbarcurrenttime></vg-scrubbarcurrenttime>
+                                            </vg-scrubBar>
+                                            <vg-timeDisplay>{{ totalTime }}</vg-timeDisplay>
+                                            <vg-volume>
+                                                <vg-mutebutton
+                                                    vg-volume-level-3-icon="config.theme.volumeLevel3Icon"
+                                                    vg-volume-level-2-icon="config.theme.volumeLevel2Icon"
+                                                    vg-volume-level-1-icon="config.theme.volumeLevel1Icon"
+                                                    vg-volume-level-0-icon="config.theme.volumeLevel0Icon"
+                                                    vg-mute-icon="config.theme.muteIcon">
+                                                </vg-mutebutton>
+                                                <vg-volumebar></vg-volumebar>
+                                            </vg-volume>
+                                            <vg-fullscreenButton vg-enter-full-screen-icon="config.theme.enterFullScreenIcon" vg-exit-full-screen-icon="config.theme.exitFullScreenIcon"></vg-fullscreenButton>
+                                        </vg-controls>
+                                    </videogular>
+                                  </div>
+                                </div>
+                                <div ng-if="obj.type=='Image'"
                                     class="rn-carousel-slide ng-scope" 
                                     ng-style="{'background-image': 'url(http://campusmedius.net' + obj.url + ')'}">
                                     
