make icons bigger and break the sizes out into a constant

--- a/frontend/app/views/map.html
+++ b/frontend/app/views/map.html
@@ -15,8 +15,7 @@
                         ng-mouseenter="highlightActor(actor.id)" 
                         ng-mouseleave="highlightActor(actor.id, true)" 
                         style="margin-left:{{actor.startPercent}}%;width:{{actor.endPercent - actor.startPercent}}%;background-color:#{{actor.color}}">
-                            #{{actor.id}}<br />
-                            {{actor.start}} - {{actor.end}}
+                            <!--span>#{{actor.id}}<br />{{actor.start}} - {{actor.end}}</span-->
                     </div>
                 </div>
             </div>
