--- a/frontend/app/views/actor.html
+++ b/frontend/app/views/actor.html
@@ -52,6 +52,7 @@
                                     ng-style="{'background-image': 'url(http://campusmedius.net' + obj.url + ')'}">
                                     
                                 </div>
+                                <div class="caption" ng-bind-html="obj.caption"></div>
                             </li>
 
                         </ul>
