--- a/frontend/app/styles/styles.scss
+++ b/frontend/app/styles/styles.scss
@@ -205,7 +205,7 @@ button.close{
 }
 .leaflet-popup-content{
     margin:0;
-    width:270px;
+    min-width:340px;
 }
 .leaflet-popup-content-inner{
     padding:13px 19px;
@@ -214,6 +214,10 @@ button.close{
 }
 .leaflet-popup-column{
     width:50%;
+    strong{
+        font-family: $titleFont;
+        font-size:16px;
+    }
     img{
         max-width: 100% !important;
     }
