--- a/frontend/app/styles/styles.scss
+++ b/frontend/app/styles/styles.scss
@@ -67,15 +67,17 @@ hr{
     font-size:18px;
 }
 .nav > li > a:hover{
-    color:black;
-    background-color:#666;
+    border-bottom: 1px solid #666;
+    background: transparent;
+    border-radius: 0;
 }
 .nav-pills > li{
     margin-right: 8px;
 }
 .nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus{
-    background-color:white;
-    color:black;
+    border-bottom: 1px solid white;
+    background: transparent;
+    border-radius: 0;
 }
 .angular-leaflet-map{
     height:400px;
@@ -88,7 +90,7 @@ hr{
     width:100%;
 }
 #timelineWrapper{
-    padding:15px 0;
+    padding-bottom: 15px;
     background:black;
 }
 .timelineItems{
@@ -100,7 +102,7 @@ hr{
         width: 100%;
         float: left;
         position:relative;
-        height:36px;
+        height:20px;
     }
 
     .actor{
@@ -113,9 +115,8 @@ hr{
         top:5px;
         background:#FAFAFA;
         padding: 3px 5px;
-        height: 30px;
+        height: 20px;
         font-size: 9px;
-        box-shadow: inset 0px 0px 10px 0px rgba(0,0,0,.3);
 
         &:hover{
             background-color:white !important;
@@ -224,7 +225,6 @@ button.close{
 }
 /* carousel */
 .carousel img{
-    max-height: 600px;
     max-width: 95%;
     margin: 0 auto;
     display:block;
@@ -238,7 +238,8 @@ button.close{
     background: transparent;
 }
 .rn-carousel-control{
-    opacity:.4
+    opacity:.4;
+    top:250px;
 }
 .rn-carousel-control:before{
     background: rgba(255,255,255,.6);
@@ -255,11 +256,15 @@ button.close{
 }
 .event-carousel{
     width:100%;
-    height:600px;
     .rn-carousel-slide{
         background-size:contain;
         background-repeat: no-repeat;
         background-position: center center;
+        overflow:scroll;
+    }
+    .rn-carousel-slide-item{
+        max-height: 600px;
+        overflow: scroll;
     }
 }
 videogular{
@@ -272,13 +277,13 @@ vg-controls{
 }
 
 .caption{
-    position: absolute;
-    bottom: 0;
-    background: rgba(0,0,0,.6);
-    color: white;
+    // position: absolute;
+    // bottom: 0;
+    //max-height: 90px;
+    // background: rgba(0,0,0,.6);
+    // color: white;
     width: 100%;
     padding:10px;
-    max-height: 90px;
     overflow: scroll;
     a{
         font-weight: bold;
