--- a/frontend/app/styles/styles.scss
+++ b/frontend/app/styles/styles.scss
@@ -16,6 +16,7 @@ rzslider span.bar.selection{
 }
 rzslider span.bubble{
     color: $grayLight;
+    font-size: 13px;
 }
 rzslider span.bubble.limit{
     color: $grayLight;
@@ -108,7 +109,7 @@ blockquote, blockquote p{
         width: 100%;
         float: left;
         position:relative;
-        height:20px;
+        height:15px;
     }
 
     .actor{
@@ -121,7 +122,7 @@ blockquote, blockquote p{
         top:5px;
         background:#FAFAFA;
         padding: 3px 5px;
-        height: 20px;
+        height: 15px;
         font-size: 9px;
 
         &:hover{
