--- a/frontend/app/views/actor.html
+++ b/frontend/app/views/actor.html
@@ -47,7 +47,7 @@
                                     </videogular>
                                   </div>
                                 </div>
-                                <div ng-if="obj.type=='Image'"
+                                <div ng-if="obj.type=='Image' || obj.type=='Document'"
                                     class="rn-carousel-slide-item ng-scope">
                                     <img ng-src="http://campusmedius.net/{{obj.url}}">
                                     
